# mrc-baseline-raw

./: .gitignore  README.md  draw.txt  main.py  pyproject.toml  reproduce_bug.py  run_stage_training.sh
code/: README.md  arguments.py  inference.py  retrieval.py  retrieval_hybrid.py  train.py  trainer_qa.py  utils_qa.py
code/src/: arguments.py  build_qdrant_index.py  compare_sparse.py  example.py  extractor_data_loader.py  inference.py  inference_sparse.py  retrieval_hybrid.py  retrieval_qdrant_final.py  retrieval_splade_hybrid.py  test.py  train.py  train_hyun.py  utils.py  utils_qa.py
code/src/dummy_script/: retrieval.py
dummy/code/: README.md  deps.txt  requirements.txt
dummy/embedding_candidates/: leaderboard.md
embedding_candidates/dragonkue/: snowflake-arctic-embed-l-v2.0-ko.md
embedding_candidates/telepix/: PIXIE-Rune-Preview.md  PIXIE-Spell-Preview-1.7B.md  Sparse-PIXIE-Splade-Preview.md
notebooks/: eda.ipynb  eda_docs.ipynb  eda_train_data.ipynb
output/: .gitkeep
src/: __init__.py
src/config/: __init__.py  base_config.py  qdrant_config.py  reader_config.py  retriever_config.py
src/reader/: __init__.py  data_processor.py  inference.py  train_qa.py
src/retriever/: __init__.py
src/scripts/: run_all_pipeline.py  run_build_vector_db.py  run_reader_predict.py  run_reader_train.py  run_retrieve.py
src/utils/: __init__.py  arguments.py  seed.py
wandb/: latest-run
wandb/run-20251207_221039-8bbij8ep/: run-8bbij8ep.wandb
wandb/run-20251207_222432-wgcdg0u0/: run-wgcdg0u0.wandb
wandb/run-20251207_233228-epoqro8z/: run-epoqro8z.wandb
(+108 files in other folders)
