[project]
name = "qdqa-0-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "accelerate>=0.31.0",
    "evaluate==0.4.6",
    "faiss-gpu>=1.7.2",
    "kiwipiepy>=0.22.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.3.1",
    "matplotlib>=3.10.7",
    "numpy<2.0.0",
    "pandas==2.3.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "slack-bolt>=1.27.0",
    "transformers>=4.42.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
